--- a/index.html
+++ b/index.html
@@ -62,60 +62,12 @@
       <div class="row">
         <div class="large-12 columns">
 
-          <div class="row">
-            <div class="large-8 columns">d</div>
-            <div class="large-4 columns activities">
-              <h1>Last Activities</h1>
-              <h4>14 de Janeiro de 2015</h4>
-              <div class="activity">
-                <h5>Samuel Moraes criou uma subtarefa para a tarefa <a href="#">#32</a></h5>
-                <p>Fazer reserva da casa</p>
-              </div>
-              <h4>14 de Janeiro de 2015</h4>
-              <div class="activity">
-                <h5>Samuel Moraes criou uma subtarefa para a tarefa <a href="#">#32</a></h5>
-                <p>Fazer reserva da casa</p>
-              </div>
-              <h4>14 de Janeiro de 2015</h4>
-              <div class="activity">
-                <h5>Samuel Moraes criou uma subtarefa para a tarefa <a href="#">#32</a></h5>
-                <p>Fazer reserva da casa</p>
-              </div>
-              <h4>14 de Janeiro de 2015</h4>
-              <div class="activity">
-                <h5>Samuel Moraes criou uma subtarefa para a tarefa <a href="#">#32</a></h5>
-                <p>Fazer reserva da casa</p>
-              </div>
-            </div>
-          </div>
 
-          <br>
-          <h4>The Psychohistorians</h4>
-          <p>Set in the year 0 F.E. ("Foundation Era"), The Psychohistorians opens on Trantor, the capital of the 12,000-year-old Galactic Empire. Though the empire appears stable and powerful, it is slowly decaying in ways that parallel the decline of the Western Roman Empire. Hari Seldon, a mathematician and psychologist, has developed psychohistory, a new field of science and psychology that equates all possibilities in large societies to mathematics, allowing for the prediction of future events.</p>
-
-          <p>Using psychohistory, Seldon has discovered the declining nature of the Empire, angering the aristocratic members of the Committee of Public Safety, the de facto rulers of the Empire. The Committee considers Seldon's views and statements treasonous, and he is arrested along with young mathematician Gaal Dornick, who has arrived on Trantor to meet Seldon. Seldon is tried by the Committee and defends his beliefs, explaining his theories and predictions, including his belief that the Empire will collapse in 500 years and enter a 30,000-year dark age, to the Committee's members. </p>
-
-          <p>Set in the year 0 F.E. ("Foundation Era"), The Psychohistorians opens on Trantor, the capital of the 12,000-year-old Galactic Empire. Though the empire appears stable and powerful, it is slowly decaying in ways that parallel the decline of the Western Roman Empire. Hari Seldon, a mathematician and psychologist, has developed psychohistory, a new field of science and psychology that equates all possibilities in large societies to mathematics, allowing for the prediction of future events.</p>
-
-          <p>Using psychohistory, Seldon has discovered the declining nature of the Empire, angering the aristocratic members of the Committee of Public Safety, the de facto rulers of the Empire. The Committee considers Seldon's views and statements treasonous, and he is arrested along with young mathematician Gaal Dornick, who has arrived on Trantor to meet Seldon. Seldon is tried by the Committee and defends his beliefs, explaining his theories and predictions, including his belief that the Empire will collapse in 500 years and enter a 30,000-year dark age, to the Committee's members. </p>
-
-          <p>Set in the year 0 F.E. ("Foundation Era"), The Psychohistorians opens on Trantor, the capital of the 12,000-year-old Galactic Empire. Though the empire appears stable and powerful, it is slowly decaying in ways that parallel the decline of the Western Roman Empire. Hari Seldon, a mathematician and psychologist, has developed psychohistory, a new field of science and psychology that equates all possibilities in large societies to mathematics, allowing for the prediction of future events.</p>
-
-          <p>Using psychohistory, Seldon has discovered the declining nature of the Empire, angering the aristocratic members of the Committee of Public Safety, the de facto rulers of the Empire. The Committee considers Seldon's views and statements treasonous, and he is arrested along with young mathematician Gaal Dornick, who has arrived on Trantor to meet Seldon. Seldon is tried by the Committee and defends his beliefs, explaining his theories and predictions, including his belief that the Empire will collapse in 500 years and enter a 30,000-year dark age, to the Committee's members. </p>
-
-          <p>Set in the year 0 F.E. ("Foundation Era"), The Psychohistorians opens on Trantor, the capital of the 12,000-year-old Galactic Empire. Though the empire appears stable and powerful, it is slowly decaying in ways that parallel the decline of the Western Roman Empire. Hari Seldon, a mathematician and psychologist, has developed psychohistory, a new field of science and psychology that equates all possibilities in large societies to mathematics, allowing for the prediction of future events.</p>
-
-          <p>Using psychohistory, Seldon has discovered the declining nature of the Empire, angering the aristocratic members of the Committee of Public Safety, the de facto rulers of the Empire. The Committee considers Seldon's views and statements treasonous, and he is arrested along with young mathematician Gaal Dornick, who has arrived on Trantor to meet Seldon. Seldon is tried by the Committee and defends his beliefs, explaining his theories and predictions, including his belief that the Empire will collapse in 500 years and enter a 30,000-year dark age, to the Committee's members. </p>
 
         </div>
-      </div>
+      </div>    
     </section>
 
-  <a class="exit-off-canvas"></a>
-
-  </div>
-</div>    
-
-    <script src="js/app.min.js"></script>
+    <script src="js/app.js"></script>
   </body>
 </html>
